Bug 1225504 xenea theme, z-index prevents theme menu from working. Remedy: 1. Set a z-index 211 at the #optionsmenu level and remove all subordinate z-index statements.  This resolves the bug. 2. Set a z-index 210 at the #topMenu level and remove all subordinate z-index statements.  This improves maintainability.

--- a/themes/xenea/style.css
+++ b/themes/xenea/style.css
@@ -93,10 +93,11 @@ html[dir=rtl] #login-menu {left:auto;right:50%}
 html[dir=rtl] #lang-menu {float:left;margin-left:10px;text-align:left;}
 html[dir=rtl] #lang-menu .makeMenu li ul {right:auto;left:0;}
 
+#optionsmenu{z-index:211;}
 .makeMenu li {display:inline;position:relative;white-space:nowrap;}
 .makeMenu a {color:#ffffff;font-weight:bold;}
 .makeMenu a:hover {color:#ff0000;}
-.makeMenu li ul {display:none;position:absolute;left:0;right:auto;top:1.1em;background-color:#ffffff;border:thin solid #c3dfff;z-index:999;}
+.makeMenu li ul {display:none;position:absolute;left:0;right:auto;top:1.1em;background-color:#ffffff;border:thin solid #c3dfff;}
 .makeMenu li ul li {padding:2px;display:block;text-align:left;}
 .makeMenu li ul li a {color:#000000;font-weight:normal;}
 .makeMenu li ul li a:hover {color:#ff0000;;}
@@ -111,11 +112,10 @@ html[dir=rtl] #extra-menu {text-align:left;}
 html[dir=rtl] #extra-menu.makeMenu li ul {left:0;right:auto;}
 
 /* ======= Main menu items ========== */
-#topMenu                   {border-bottom:2px solid #0073cf;float:left;height:45px;margin-bottom:10px;padding:5px 0 10px 0;position:relative;width:100%;}
-#main-menu                 {clear:both;position:relative;z-index:50;float:right;right:50%;margin-top:5px;}
+#topMenu                   {border-bottom:2px solid #0073cf;float:left;height:45px;margin-bottom:10px;padding:5px 0 10px 0;position:relative;width:100%;z-index:210;}
+#main-menu                 {clear:both;position:relative;float:right;right:50%;margin-top:5px;}
 #main-menu,
-#main-menu ul              {padding:0;list-style-type:none;z-index:210;}
-#main-menu ul ul           {z-index:60;}
+#main-menu ul              {padding:0;list-style-type:none;}
 #main-menu li              {float:left;position:relative;left:50%;}
 #main-menu li li           {clear:both;}
 #main-menu li:hover > ul   {display:block;position:absolute;top:0;left:100%;right:auto;margin-top:0;}
